crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E111_E11.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
./resources/test/fixtures/pycodestyle/E11.py:3:3: E111 Indentation is not a multiple of 4
  |
3 | #: E111
4 | if x > 2:
5 |   print(x)
  |    E111
6 | #: E111 E117
7 | if True:
  |

./resources/test/fixtures/pycodestyle/E11.py:6:6: E111 Indentation is not a multiple of 4
   |
 6 | #: E111 E117
 7 | if True:
 8 |      print()
   |       E111
 9 | #: E112
10 | if False:
   |


