crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E112_E11.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- - kind:
      name: NoIndentedBlock
      body: Expected an indented block
      suggestion: ~
      fixable: false
    location:
      row: 9
      column: 0
    end_location:
      row: 9
      column: 0
    fix: ~
    parent: ~

