crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E114_E11.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: IndentationWithInvalidMultipleComment
    body: Indentation is not a multiple of 4 (comment)
    commit: ~
    fixable: false
  location:
    row: 15
    column: 5
  end_location:
    row: 15
    column: 5
  fix: ~
  parent: ~

