crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E115_E11.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
./resources/test/fixtures/pycodestyle/E11.py:30:1: E115 Expected an indented block (comment)
   |
30 | def start(self):
31 |     if True:
32 | #       try:
   |  E115
33 | #           self.master.start()
34 | #       except MasterExit:
   |

./resources/test/fixtures/pycodestyle/E11.py:31:1: E115 Expected an indented block (comment)
   |
31 |     if True:
32 | #       try:
33 | #           self.master.start()
   |  E115
34 | #       except MasterExit:
35 | #           self.shutdown()
   |

./resources/test/fixtures/pycodestyle/E11.py:32:1: E115 Expected an indented block (comment)
   |
32 | #       try:
33 | #           self.master.start()
34 | #       except MasterExit:
   |  E115
35 | #           self.shutdown()
36 | #       finally:
   |

./resources/test/fixtures/pycodestyle/E11.py:33:1: E115 Expected an indented block (comment)
   |
33 | #           self.master.start()
34 | #       except MasterExit:
35 | #           self.shutdown()
   |  E115
36 | #       finally:
37 | #           sys.exit()
   |

./resources/test/fixtures/pycodestyle/E11.py:34:1: E115 Expected an indented block (comment)
   |
34 | #       except MasterExit:
35 | #           self.shutdown()
36 | #       finally:
   |  E115
37 | #           sys.exit()
38 |         self.master.start()
   |

./resources/test/fixtures/pycodestyle/E11.py:35:1: E115 Expected an indented block (comment)
   |
35 | #           self.shutdown()
36 | #       finally:
37 | #           sys.exit()
   |  E115
38 |         self.master.start()
39 | #: E117
   |


