crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E116_E11.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: UnexpectedIndentationComment
    body: Unexpected indentation (comment)
    commit: ~
    fixable: false
  location:
    row: 15
    column: 5
  end_location:
    row: 15
    column: 5
  fix: ~
  parent: ~
- kind:
    name: UnexpectedIndentationComment
    body: Unexpected indentation (comment)
    commit: ~
    fixable: false
  location:
    row: 22
    column: 12
  end_location:
    row: 22
    column: 12
  fix: ~
  parent: ~
- kind:
    name: UnexpectedIndentationComment
    body: Unexpected indentation (comment)
    commit: ~
    fixable: false
  location:
    row: 24
    column: 12
  end_location:
    row: 24
    column: 12
  fix: ~
  parent: ~
- kind:
    name: UnexpectedIndentationComment
    body: Unexpected indentation (comment)
    commit: ~
    fixable: false
  location:
    row: 26
    column: 12
  end_location:
    row: 26
    column: 12
  fix: ~
  parent: ~

