crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E117_E11.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: OverIndented
    body: Over-indented
    commit: ~
    fixable: false
  location:
    row: 6
    column: 5
  end_location:
    row: 6
    column: 5
  fix: ~
  parent: ~
- kind:
    name: OverIndented
    body: Over-indented
    commit: ~
    fixable: false
  location:
    row: 39
    column: 8
  end_location:
    row: 39
    column: 8
  fix: ~
  parent: ~
- kind:
    name: OverIndented
    body: Over-indented
    commit: ~
    fixable: false
  location:
    row: 42
    column: 2
  end_location:
    row: 42
    column: 2
  fix: ~
  parent: ~

