crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E202_E20.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- - kind:
      name: WhitespaceBeforeCloseBracket
      body: "Whitespace before ')'"
      suggestion: ~
      fixable: false
    location:
      row: 19
      column: 22
    end_location:
      row: 19
      column: 22
    fix: ~
    parent: ~
  - kind:
      name: WhitespaceBeforeCloseBracket
      body: "Whitespace before ')'"
      suggestion: ~
      fixable: false
    location:
      row: 21
      column: 21
    end_location:
      row: 21
      column: 21
    fix: ~
    parent: ~
  - kind:
      name: WhitespaceBeforeCloseBracket
      body: "Whitespace before ')'"
      suggestion: ~
      fixable: false
    location:
      row: 23
      column: 10
    end_location:
      row: 23
      column: 10
    fix: ~
    parent: ~
  - kind:
      name: WhitespaceBeforeCloseBracket
      body: "Whitespace before ')'"
      suggestion: ~
      fixable: false
    location:
      row: 25
      column: 22
    end_location:
      row: 25
      column: 22
    fix: ~
    parent: ~
  - kind:
      name: WhitespaceBeforeCloseBracket
      body: "Whitespace before ')'"
      suggestion: ~
      fixable: false
    location:
      row: 27
      column: 21
    end_location:
      row: 27
      column: 21
    fix: ~
    parent: ~
  - kind:
      name: WhitespaceBeforeCloseBracket
      body: "Whitespace before ')'"
      suggestion: ~
      fixable: false
    location:
      row: 29
      column: 10
    end_location:
      row: 29
      column: 10
    fix: ~
    parent: ~

