crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E211_E21.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
./resources/test/fixtures/pycodestyle/E21.py:2:5: E211 [*] Whitespace before '('
  |
2 | #: E211
3 | spam (1)
  |     ^ E211
4 | #: E211 E211
5 | dict ['key'] = list [index]
  |
  = help: Removed whitespace before '('

ℹ Suggested fix
1 1 | #: E211
2   |-spam (1)
  2 |+spam(1)
3 3 | #: E211 E211
4 4 | dict ['key'] = list [index]
5 5 | #: E211

./resources/test/fixtures/pycodestyle/E21.py:4:5: E211 [*] Whitespace before '['
  |
4 | spam (1)
5 | #: E211 E211
6 | dict ['key'] = list [index]
  |     ^ E211
7 | #: E211
8 | dict['key'] ['subkey'] = list[index]
  |
  = help: Removed whitespace before '['

ℹ Suggested fix
1 1 | #: E211
2 2 | spam (1)
3 3 | #: E211 E211
4   |-dict ['key'] = list [index]
  4 |+dict['key'] = list [index]
5 5 | #: E211
6 6 | dict['key'] ['subkey'] = list[index]
7 7 | #: Okay

./resources/test/fixtures/pycodestyle/E21.py:4:20: E211 [*] Whitespace before '['
  |
4 | spam (1)
5 | #: E211 E211
6 | dict ['key'] = list [index]
  |                    ^ E211
7 | #: E211
8 | dict['key'] ['subkey'] = list[index]
  |
  = help: Removed whitespace before '['

ℹ Suggested fix
1 1 | #: E211
2 2 | spam (1)
3 3 | #: E211 E211
4   |-dict ['key'] = list [index]
  4 |+dict ['key'] = list[index]
5 5 | #: E211
6 6 | dict['key'] ['subkey'] = list[index]
7 7 | #: Okay

./resources/test/fixtures/pycodestyle/E21.py:6:12: E211 [*] Whitespace before '['
   |
 6 | dict ['key'] = list [index]
 7 | #: E211
 8 | dict['key'] ['subkey'] = list[index]
   |            ^ E211
 9 | #: Okay
10 | spam(1)
   |
   = help: Removed whitespace before '['

ℹ Suggested fix
3 3 | #: E211 E211
4 4 | dict ['key'] = list [index]
5 5 | #: E211
6   |-dict['key'] ['subkey'] = list[index]
  6 |+dict['key']['subkey'] = list[index]
7 7 | #: Okay
8 8 | spam(1)
9 9 | dict['key'] = list[index]


